# Hyko-sdk

./: .pre-commit-config.yaml  .test.env  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/configs/: release-please-config.json  release-please-manifest.json
.github/workflows/: housekeeping-workflow.yml  release-please.yml  test.yml
hyko_sdk/: client.py  components.py  definitions.py  io.py  json_schema.py  models.py  utils.py
hyko_sdk/components/: components.py  utils.py
scripts/: setup.sh
tests/: conftest.py  test_definitions.py  test_io.py  test_utils.py
