[tool.poetry]
name = "hyko_sdk"
version = "4.5.0"
authors = []
description = "Hyko python SDK."

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = "^0.100.1"
soundfile = "^0.12.1"
pydantic = "^2.5.3"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pillow = "^10.2.0"
httpx = "0.24.1"
aiofiles = "^23.2.1"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.9"
gitlint = "^0.19.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.1.1"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
